[package]
name = "render_cerke_board"
version = "0.1.17"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2021"
description = "See https://sites.google.com/view/cet2kaik/the-standardized-rule-in-english for context."
license = "MIT"
exclude = [ "*.png" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.3"
rand_distr = "0.4.0"
cetkaik_core = "0.3.8"
wood_grain = "0.2.1"